Modifications du notebook avec différentes étapes dans l'exploration des données, la modélisation et l'utilisation de MLFlows. Modification de gitignore afin d'éviter de suivre des fichiers trop volumineux.

--- a/.gitignore
+++ b/.gitignore
@@ -169,5 +169,11 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+
+# Ajout des fichiers .csv à ignorer
 data/raw/*.csv
 data/raw/creditcard.csv
+data/processed/*.csv
+
+# Ajout du fichier mlruns car trop volumineux.
+mlruns/
